Bugzilla 292660.