@@ -87,7 +87,7 @@ public class RAWBinaryImporter implements IMemoryImporter {
 		// restore to this address
 		
 		Label labelStartText = new Label(composite, SWT.NONE);
-		labelStartText.setText("Restore to address: ");
+		labelStartText.setText(Messages.getString("RAWBinaryImporter.RestoreAddress")); //$NON-NLS-1$
 		
 		fStartText = new Text(composite, SWT.NONE);
 		FormData data = new FormData();
@@ -101,7 +101,7 @@ public class RAWBinaryImporter implements IMemoryImporter {
 		fFileText = new Text(composite, SWT.NONE);
 		Button fileButton = new Button(composite, SWT.PUSH);
 		
-		fileLabel.setText("File name: "); 
+		fileLabel.setText(Messages.getString("Importer.File"));  //$NON-NLS-1$
 		data = new FormData();
 		data.top = new FormAttachment(fileButton, 0, SWT.CENTER);
 		fileLabel.setLayoutData(data);
@@ -112,14 +112,14 @@ public class RAWBinaryImporter implements IMemoryImporter {
 		data.width = 300;
 		fFileText.setLayoutData(data);
 		
-		fileButton.setText("Browse...");
+		fileButton.setText(Messages.getString("Importer.Browse")); //$NON-NLS-1$
 		data = new FormData();
 		data.top = new FormAttachment(fStartText);
 		data.left = new FormAttachment(fFileText);
 		fileButton.setLayoutData(data);
 		
-		fFileText.setText(properties.getProperty(TRANSFER_FILE, ""));
-		fScrollToStart = new Boolean(properties.getProperty(TRANSFER_SCROLL_TO_START, "true"));
+		fFileText.setText(properties.getProperty(TRANSFER_FILE, "")); //$NON-NLS-1$
+		fScrollToStart = Boolean.valueOf(properties.getProperty(TRANSFER_SCROLL_TO_START, Boolean.TRUE.toString()));
 		try
 		{
 			fStartText.setText(properties.getProperty(TRANSFER_START));
@@ -127,7 +127,7 @@ public class RAWBinaryImporter implements IMemoryImporter {
 		catch(IllegalArgumentException e)
 		{
 			MemoryTransportPlugin.getDefault().getLog().log(new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-		    	DebugException.INTERNAL_ERROR, "Failure", e));
+		    	DebugException.INTERNAL_ERROR, "Failure", e)); //$NON-NLS-1$
 		}
 		
 		fileButton.addSelectionListener(new SelectionListener() {
@@ -137,9 +137,9 @@ public class RAWBinaryImporter implements IMemoryImporter {
 
 			public void widgetSelected(SelectionEvent e) {
 				FileDialog dialog = new FileDialog(parent.getShell(), SWT.SAVE);
-				dialog.setText("Choose memory import file");
-				dialog.setFilterExtensions(new String[] { "*.*;*" } );
-				dialog.setFilterNames(new String[] { "All Files" } );
+				dialog.setText(Messages.getString("RAWBinaryImporter.ChooseFile")); //$NON-NLS-1$
+				dialog.setFilterExtensions(new String[] { "*.*;*" } ); //$NON-NLS-1$
+				dialog.setFilterNames(new String[] { Messages.getString("Importer.AllFiles") } ); //$NON-NLS-1$
 				dialog.setFileName(fFileText.getText());
 				dialog.open();
 			
@@ -182,7 +182,7 @@ public class RAWBinaryImporter implements IMemoryImporter {
 		});
 		
 		fScrollToBeginningOnImportComplete = new Button(composite, SWT.CHECK);
-		fScrollToBeginningOnImportComplete.setText("Scroll to File Start Address");
+		fScrollToBeginningOnImportComplete.setText(Messages.getString("RAWBinaryImporter.ScrollToStart")); //$NON-NLS-1$
 		data = new FormData();
 		data.top = new FormAttachment(fileButton);
 		fScrollToBeginningOnImportComplete.setLayoutData(data);
@@ -226,7 +226,7 @@ public class RAWBinaryImporter implements IMemoryImporter {
 	public BigInteger getStartAddress()
 	{
 		String text = fStartText.getText();
-		boolean hex = text.startsWith("0x");
+		boolean hex = text.startsWith("0x"); //$NON-NLS-1$
 		BigInteger startAddress = new BigInteger(hex ? text.substring(2) : text,
 			hex ? 16 : 10); 
 		
@@ -240,12 +240,12 @@ public class RAWBinaryImporter implements IMemoryImporter {
 	
 	public String getId()
 	{
-		return "rawbinary";
+		return "rawbinary"; //$NON-NLS-1$
 	}
 	
 	public String getName()
 	{
-		return "RAW Binary";
+		return Messages.getString("RAWBinaryImporter.Name"); //$NON-NLS-1$
 	}
 	
 	public void importMemory() {
@@ -270,7 +270,7 @@ public class RAWBinaryImporter implements IMemoryImporter {
 					
 					byte[] byteValues = new byte[1024];
 					
-					monitor.beginTask("Transferring Data", jobs.intValue()); //$NON-NLS-1$
+					monitor.beginTask(Messages.getString("Importer.ProgressTitle"), jobs.intValue()); //$NON-NLS-1$
 					
 					int actualByteCount = reader.read(byteValues);
 					BigInteger recordAddress = fStartAddress;
@@ -307,24 +307,25 @@ public class RAWBinaryImporter implements IMemoryImporter {
 					reader.close();
 					monitor.done();
 					
-					if(fProperties.getProperty(TRANSFER_SCROLL_TO_START, "false").equals("true"))
+					if(Boolean.parseBoolean(fProperties.getProperty(TRANSFER_SCROLL_TO_START, Boolean.FALSE.toString())))
 						fParentDialog.scrollRenderings(scrollToAddress);
+					
 				} catch (IOException ex) {
 					MemoryTransportPlugin.getDefault().getLog().log(new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-							DebugException.REQUEST_FAILED, "Could not read from file.", ex));
+							DebugException.REQUEST_FAILED, Messages.getString("Importer.ErrReadFile"), ex));  //$NON-NLS-1$
 					return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-					    	DebugException.REQUEST_FAILED, "Could not read from file.", ex);
+					    	DebugException.REQUEST_FAILED, Messages.getString("Importer.ErrReadFile"), ex);  //$NON-NLS-1$
 					
 				} catch (DebugException ex) {
 					MemoryTransportPlugin.getDefault().getLog().log(new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-							DebugException.REQUEST_FAILED, "Could not write to target.", ex));	
+							DebugException.REQUEST_FAILED, Messages.getString("Importer.ErrWriteTarget"), ex));	  //$NON-NLS-1$
 					return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-					    	DebugException.REQUEST_FAILED, "Could not write to target.", ex);						
-				} catch (Exception ex) { 
+					    	DebugException.REQUEST_FAILED, Messages.getString("Importer.ErrWriteTarget"), ex);						  //$NON-NLS-1$
+				} catch (Exception ex) {
 					MemoryTransportPlugin.getDefault().getLog().log(new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-							DebugException.INTERNAL_ERROR, "Failure importing from file", ex));
+							DebugException.INTERNAL_ERROR, Messages.getString("Importer.FalureImporting"), ex));  //$NON-NLS-1$
 					return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-				    	DebugException.INTERNAL_ERROR, "Failure importing from file", ex);
+					    	DebugException.INTERNAL_ERROR, Messages.getString("Importer.FalureImporting"), ex);  //$NON-NLS-1$
 				}
 				return Status.OK_STATUS;
 			}};
