@@ -78,7 +78,7 @@ public class SRecordImporter implements IMemoryImporter {
 				fProperties.setProperty(TRANSFER_FILE, fFileText.getText());
 				fProperties.setProperty(TRANSFER_START, fStartText.getText());
 				fProperties.setProperty(TRANSFER_SCROLL_TO_START, fScrollToStart.toString());
-				fProperties.setProperty(TRANSFER_CUSTOM_START_ADDRESS, "" + fComboRestoreToThisAddress.getSelection());
+				fProperties.setProperty(TRANSFER_CUSTOM_START_ADDRESS, "" + fComboRestoreToThisAddress.getSelection()); //$NON-NLS-1$
 				
 				fStartAddress = getStartAddress();
 				fInputFile = getFile();
@@ -95,15 +95,15 @@ public class SRecordImporter implements IMemoryImporter {
 		
 		fComboRestoreToFileAddress = new Button(composite, SWT.RADIO);
 		fComboRestoreToFileAddress.setSelection(true);
-		fComboRestoreToFileAddress.setText("Restore to address specified in the file");
-		fComboRestoreToFileAddress.setSelection(!new Boolean(properties.getProperty(TRANSFER_CUSTOM_START_ADDRESS, "false")).booleanValue());
+		fComboRestoreToFileAddress.setText(Messages.getString("SRecordImporter.FileAddressRestore"));  //$NON-NLS-1$
+		fComboRestoreToFileAddress.setSelection(!Boolean.getBoolean(properties.getProperty(TRANSFER_CUSTOM_START_ADDRESS, Boolean.FALSE.toString()))); 
 		//comboRestoreToFileAddress.setLayoutData(data);
 		
 		// restore to this address
 		
 		fComboRestoreToThisAddress = new Button(composite, SWT.RADIO);
-		fComboRestoreToThisAddress.setText("Restore to this address: "); 
-		fComboRestoreToThisAddress.setSelection(new Boolean(properties.getProperty(TRANSFER_CUSTOM_START_ADDRESS, "false")).booleanValue());
+		fComboRestoreToThisAddress.setText(Messages.getString("SRecordImporter.CustomAddressRestore"));   //$NON-NLS-1$
+		fComboRestoreToThisAddress.setSelection(Boolean.parseBoolean(properties.getProperty(TRANSFER_CUSTOM_START_ADDRESS, Boolean.FALSE.toString()))); 
 		FormData data = new FormData();
 		data.top = new FormAttachment(fComboRestoreToFileAddress);
 		fComboRestoreToThisAddress.setLayoutData(data);
@@ -139,7 +139,7 @@ public class SRecordImporter implements IMemoryImporter {
 		fFileText = new Text(composite, SWT.NONE);
 		Button fileButton = new Button(composite, SWT.PUSH);
 		
-		fileLabel.setText("File name: "); 
+		fileLabel.setText(Messages.getString("Importer.File"));   //$NON-NLS-1$
 		data = new FormData();
 		data.top = new FormAttachment(fileButton, 0, SWT.CENTER);
 		fileLabel.setLayoutData(data);
@@ -150,14 +150,14 @@ public class SRecordImporter implements IMemoryImporter {
 		data.width = 300;
 		fFileText.setLayoutData(data);
 		
-		fileButton.setText("Browse...");
+		fileButton.setText(Messages.getString("Importer.Browse"));  //$NON-NLS-1$
 		data = new FormData();
 		data.top = new FormAttachment(fStartText);
 		data.left = new FormAttachment(fFileText);
 		fileButton.setLayoutData(data);
 		
-		fFileText.setText(properties.getProperty(TRANSFER_FILE, ""));
-		fScrollToStart = new Boolean(properties.getProperty(TRANSFER_SCROLL_TO_START, "true"));
+		fFileText.setText(properties.getProperty(TRANSFER_FILE, "")); //$NON-NLS-1$
+		fScrollToStart = Boolean.valueOf(properties.getProperty(TRANSFER_SCROLL_TO_START, Boolean.TRUE.toString())); 
 		try
 		{
 			fStartText.setText(properties.getProperty(TRANSFER_START));
@@ -165,7 +165,7 @@ public class SRecordImporter implements IMemoryImporter {
 		catch(IllegalArgumentException e)
 		{
 			MemoryTransportPlugin.getDefault().getLog().log(new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-		    	DebugException.INTERNAL_ERROR, "Failure", e));
+		    	DebugException.INTERNAL_ERROR, "Failure", e)); //$NON-NLS-1$
 		}
 		
 		fileButton.addSelectionListener(new SelectionListener() {
@@ -177,9 +177,9 @@ public class SRecordImporter implements IMemoryImporter {
 
 			public void widgetSelected(SelectionEvent e) {
 				FileDialog dialog = new FileDialog(parent.getShell(), SWT.SAVE);
-				dialog.setText("Choose memory import file");
-				dialog.setFilterExtensions(new String[] { "*.*;*" } );
-				dialog.setFilterNames(new String[] { "All Files" } );
+				dialog.setText(Messages.getString("SRecordImporter.ChooseFile"));  //$NON-NLS-1$
+				dialog.setFilterExtensions(new String[] { "*.*;*" } ); //$NON-NLS-1$
+				dialog.setFilterNames(new String[] { Messages.getString("Importer.AllFiles") } );  //$NON-NLS-1$
 				dialog.setFileName(fFileText.getText());
 				dialog.open();
 			
@@ -222,7 +222,7 @@ public class SRecordImporter implements IMemoryImporter {
 		});
 		
 		fScrollToBeginningOnImportComplete = new Button(composite, SWT.CHECK);
-		fScrollToBeginningOnImportComplete.setText("Scroll to File Start Address");
+		fScrollToBeginningOnImportComplete.setText(Messages.getString("SRecordImporter.ScrollToStart"));  //$NON-NLS-1$
 		data = new FormData();
 		data.top = new FormAttachment(fileButton);
 		fScrollToBeginningOnImportComplete.setLayoutData(data);
@@ -274,7 +274,7 @@ public class SRecordImporter implements IMemoryImporter {
 	public BigInteger getStartAddress()
 	{
 		String text = fStartText.getText();
-		boolean hex = text.startsWith("0x");
+		boolean hex = text.startsWith("0x"); //$NON-NLS-1$
 		BigInteger startAddress = new BigInteger(hex ? text.substring(2) : text,
 			hex ? 16 : 10); 
 		
@@ -288,12 +288,12 @@ public class SRecordImporter implements IMemoryImporter {
 	
 	public String getId()
 	{
-		return "srecord";
+		return "srecord"; //$NON-NLS-1$
 	}
 	
 	public String getName()
 	{
-		return "SRecord";
+		return Messages.getString("SRecordImporter.Name"); //$NON-NLS-1$
 	}
 	
 	public void importMemory() {
@@ -312,7 +312,7 @@ public class SRecordImporter implements IMemoryImporter {
 					BigInteger scrollToAddress = null;
 					
 					BigInteger offset = null;
-					if(!fProperties.getProperty(TRANSFER_CUSTOM_START_ADDRESS, "false").equals("true"))
+					if(!Boolean.parseBoolean(fProperties.getProperty(TRANSFER_CUSTOM_START_ADDRESS, Boolean.FALSE.toString())))  
 						offset = BigInteger.ZERO;
 					
 					BufferedReader reader = new BufferedReader(new InputStreamReader(new FileInputStream(fInputFile)));
@@ -325,7 +325,7 @@ public class SRecordImporter implements IMemoryImporter {
 						jobs = jobs.divide(factor);
 					}
 						
-					monitor.beginTask("Transferring Data", jobs.intValue()); //$NON-NLS-1$
+					monitor.beginTask(Messages.getString("Importer.ProgressTitle"), jobs.intValue());  //$NON-NLS-1$
 					
 					String line = reader.readLine();
 					int lineNo = 1; // line error reporting
@@ -337,7 +337,7 @@ public class SRecordImporter implements IMemoryImporter {
 							recordCount = Integer.parseInt(line.substring(2, 4), 16);
 						} catch (NumberFormatException ex) {
 							return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-							    	DebugException.REQUEST_FAILED, String.format("Invalid file format. Invalid line length at line %d", lineNo ), ex);
+							    	DebugException.REQUEST_FAILED, String.format(Messages.getString("SRecordImporter.InvalidLineLength"), lineNo ), ex);  //$NON-NLS-1$
 						}
 
 						int bytesRead = 4 + recordCount;
@@ -346,18 +346,18 @@ public class SRecordImporter implements IMemoryImporter {
 						
 						BigInteger recordAddress = null;
 			
-						if("S3".equals(recordType)) //$NON-NLS-1$
+						if("S3".equals(recordType))  //$NON-NLS-1$
 							addressSize = 4;
-						else if("S1".equals(recordType)) //$NON-NLS-1$
+						else if("S1".equals(recordType))  //$NON-NLS-1$
 							addressSize = 2;
-						else if("S2".equals(recordType)) //$NON-NLS-1$
+						else if("S2".equals(recordType))  //$NON-NLS-1$
 							addressSize = 3;
 
 						try {
 							recordAddress = new BigInteger(line.substring(position, position + addressSize * 2), 16);
 						} catch (NumberFormatException ex) {
 							return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-							    	DebugException.REQUEST_FAILED, String.format("Invalid file format. Invalid address at line %d", lineNo ), ex);
+							    	DebugException.REQUEST_FAILED, String.format(Messages.getString("SRecordImporter.InvalidAddress"), lineNo ), ex);  //$NON-NLS-1$
 						}
 						recordCount -= addressSize;
 						position += addressSize * 2;
@@ -374,7 +374,7 @@ public class SRecordImporter implements IMemoryImporter {
 								data[i] = new BigInteger(line.substring(position++, position++ + 1), 16).byteValue();
 							} catch (NumberFormatException ex) {
 								return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-								    	DebugException.REQUEST_FAILED, String.format("Invalid file format. Invalid data at line %d", lineNo ), ex);
+								    	DebugException.REQUEST_FAILED, String.format(Messages.getString("SRecordImporter.InvalidData"), lineNo ), ex);  //$NON-NLS-1$
 							}
 						}
 
@@ -393,7 +393,7 @@ public class SRecordImporter implements IMemoryImporter {
 								value = new BigInteger(buf.substring(i, i+2), 16);
 							} catch (NumberFormatException ex) {
 								return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-								    	DebugException.REQUEST_FAILED, String.format("Invalid file format. Invalid checksum format at line %d", lineNo ), ex);
+								    	DebugException.REQUEST_FAILED, String.format(Messages.getString("SRecordImporter.InvalidChecksum"), lineNo ), ex);  //$NON-NLS-1$
 							}
 							checksum += value.byteValue();
 						}
@@ -406,7 +406,7 @@ public class SRecordImporter implements IMemoryImporter {
 						if ( checksum != (byte) -1 ) {
 							reader.close();
 							monitor.done();
-							return new Status( IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(), "Checksum failure of line = " + line); //$NON-NLS-1$
+							return new Status( IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(), Messages.getString("SRecordImporter.ChecksumFalure") + line);  //$NON-NLS-1$
 						}
 						
 						if(scrollToAddress == null)
@@ -429,24 +429,25 @@ public class SRecordImporter implements IMemoryImporter {
 					reader.close();
 					monitor.done();
 					
-					if(fProperties.getProperty(TRANSFER_SCROLL_TO_START, "false").equals("true"))
+					if(Boolean.parseBoolean(fProperties.getProperty(TRANSFER_SCROLL_TO_START, Boolean.FALSE.toString())))  
 						fParentDialog.scrollRenderings(scrollToAddress);
+					
 				} catch (IOException ex) {
 					MemoryTransportPlugin.getDefault().getLog().log(new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-							DebugException.REQUEST_FAILED, "Could not read from file.", ex));
+							DebugException.REQUEST_FAILED, Messages.getString("Importer.ErrReadFile"), ex));  //$NON-NLS-1$
 					return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-					    	DebugException.REQUEST_FAILED, "Could not read from file.", ex);
+					    	DebugException.REQUEST_FAILED, Messages.getString("Importer.ErrReadFile"), ex);  //$NON-NLS-1$
 					
 				} catch (DebugException ex) {
 					MemoryTransportPlugin.getDefault().getLog().log(new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-							DebugException.REQUEST_FAILED, "Could not write to target.", ex));	
+							DebugException.REQUEST_FAILED, Messages.getString("Importer.ErrWriteTarget"), ex));	  //$NON-NLS-1$
 					return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-					    	DebugException.REQUEST_FAILED, "Could not write to target.", ex);						
+					    	DebugException.REQUEST_FAILED, Messages.getString("Importer.ErrWriteTarget"), ex);						  //$NON-NLS-1$
 				} catch (Exception ex) {
 					MemoryTransportPlugin.getDefault().getLog().log(new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-							DebugException.INTERNAL_ERROR, "Failure importing from file", ex));
+							DebugException.INTERNAL_ERROR, Messages.getString("Importer.FalureImporting"), ex));  //$NON-NLS-1$
 					return new Status(IStatus.ERROR, MemoryTransportPlugin.getUniqueIdentifier(),
-					    	DebugException.INTERNAL_ERROR, "Failure importing from file", ex);
+					    	DebugException.INTERNAL_ERROR, Messages.getString("Importer.FalureImporting"), ex);  //$NON-NLS-1$
 				}
 				return Status.OK_STATUS;
 			}};
